plugins {
    id 'java-library'
    id 'maven-publish'
    id 'jacoco'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.82'
    id 'io.freefair.lombok' version '8.6'
//    id("dev.vfyjxf.modaccessor") version "1.1"
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    mavenCentral()

    //kubejs
    maven {
        name = "Latvian"
        url = "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }
    maven {
        name = "JitPack"
        url = "https://jitpack.io"
        content {
            includeGroup "com.github.rtyley"
        }
    }

    // LDLib2
    maven {
        name = "Jared's maven"
        url = "https://maven.firstdarkdev.xyz/snapshots"
    }

    //GeckoLib
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroupByRegex("software\\.bernie.*")
            includeGroup("com.eliotlash.mclib")
        }
    }

    //Modrinth
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }

    //cf
    maven {
        url "https://cursemaven.com"
    }
}

base {
    archivesName = "${mod_name}-neoforge-${minecraft_version}"
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
    withSourcesJar()
}

configurations {
    create("mixinAgent") {
        canBeConsumed = false
        canBeResolved = true
//        defaultDependencies {
//            add(dependencyFactory.create("dev.vfyjxf:mixin-hotswap-agent:1.1").setTransitive(false))
//        }
    }
}


neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        clinet2 {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            programArgument '--username'
            programArgument 'zhenshiz'
        }

        server {
            server()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            def files = configurations.mixinAgent.files
            if (!files.isEmpty()) {
                jvmArgument '-javaagent:' + files.first().toPath()
            }
            systemProperty 'forge.logging.markers', 'REGISTRIES'

//            jvmArguments.add '-XX:+AllowEnhancedClassRedefinition'
//            jvmArguments.add '-XX:HotswapAgent=fatjar'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

//modAccessor {
//    createTransformConfiguration(configurations.compileOnly)
//    accessTransformerFiles = project.files('src/main/resources/META-INF/accesstransformer.cfg')
//}

dependencies {
    // KubeJS
    implementation "dev.latvian.mods:rhino:${rhino_version}"
    implementation "dev.latvian.mods:kubejs-neoforge:${kubejs_version}"

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    //must
    implementation "maven.modrinth:sodium:${sodium_version}"
    implementation "maven.modrinth:iris:${iris_version}"
    implementation "maven.modrinth:lan-server-properties:${lsp_version}"
    implementation "maven.modrinth:jei:${jei_version}"

    //plugin
    // additionalRuntimeClasspath("dev.vfyjxf:mixin-hotswap-agent:1.1")
}

tasks.withType(GenerateModuleMetadata) {
    enabled = false
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            groupId = project.group
            artifactId = base.archivesName.get()
            version = project.version

            pom.withXml {
                def dependenciesNode = asNode().getAt("dependencies")[0]
                if (dependenciesNode != null) {
                    // 这里添加你希望保留在 POM 中的 groupId 或 artifactId，也就是从 Maven 拉依赖时会附带的库、模组啥的
                    def whiteList = [
                    ]

                    def dependencies = dependenciesNode.children()
                    def toRemove = []

                    dependencies.each { dep ->
                        def artifactId = dep.artifactId.text()
                        def groupId = dep.groupId.text()

                        if (!whiteList.contains(artifactId) && !whiteList.contains(groupId)) {
                            toRemove.add(dep)
                        }
                    }

                    toRemove.each { dependenciesNode.remove(it) }
                }
            }
        }
    }

    repositories {
        def modVersion = project.findProperty('mod_version') ?: 'unknown'

        boolean isSnapshot = modVersion.toLowerCase().contains('snapshot')

        def publishUrl = isSnapshot ?
                "https://maven.sighs.cc/repository/maven-snapshots/" :
                "https://maven.sighs.cc/repository/maven-releases/"

        def publishUser = System.getenv("SIGHS_PUBLISH_USER")
        def publishPassword = System.getenv("SIGHS_PUBLISH_PASSWORD")

        maven {
            name = "remoteRepo"
            url = uri(publishUrl)
            credentials {
                username = publishUser
                password = publishPassword
            }
        }
    }
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
}

jacoco {
    toolVersion = '0.8.12'
}

tasks.named('test', Test).configure {
    finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport', JacocoReport).configure {
    dependsOn tasks.named('test')
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
}
